--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@ html {
 }
 
 body {
+	margin: 0;
+	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
@@ -11,10 +13,11 @@ body {
 }
 
 #root {
-	height: 100%;
+	height: 100vh;
 	margin: 0;
 	line-height: 1.5;
-	color: #121212;
+	background-color: #121212;
+	color: #e7e7e7;
 }
 
 #error-page {
